<resources>
    <string name="app_name">WATA</string>

    <!--  Trust or Dare strings  -->
    <string name="tod_players_header">Участники:</string>
    <string name="tod_player_name">Имя Игрока</string>
    <string name="tod_truth">Правда</string>
    <string name="tod_or">ИЛИ</string>
    <string name="tod_dare">Действие</string>
    <string name="tod_truth_or_dare">Правда или Действие</string>
    <string name="tod_task">Задание</string>
    <string name="tod_refresh">Обновить</string>
    <string name="tod_continue">Продолжить</string>
    <string name="tod_add_player">Добавить</string>
    <string name="tod_start_game">Начать</string>
    <string name="tod_enter_name">Введите имя</string>

    <!--  alias strings  -->
    <string name="alias_guessed">Очки</string>
    <string name="alias_score">0</string>
    <string name="alias_team">Команда 1</string>
    <string name="alias_word">Слово</string>
    <string name="alias_true">отгадано</string>
    <string name="alias_false">пропустить</string>
    <string name="alias_winner">Победитель</string>
    <string name="alias_win_menu">Меню</string>
    <string name="alias_teams">Команды</string>
    <string name="alias_plus">+</string>
    <string name="alias_further">Далее</string>
    <string name="alias_todo">TODO</string>
    <string name="alias_last_word">Последнее слово</string>
    <string name="alias_count_words">Кол-во слов для победы:</string>
    <string name="alias_time_rounds">Время раунда (сек):</string>
    <string name="alias_default_time_value">155</string>
    <string name="alias_default_counter_value">55</string>
    <string name="alias_go">Поехали!</string>
    <string name="alias_rating">Очки для победы</string>
    <string name="alias_settings">Настройки</string>
    <string name="menu_alias">Элиас</string>
    <string name="menu_who_i_am">Кто я?</string>
    <string name="menu_truth_or_dare">Правда или действие</string>
    <string name="alias_round">Раунд</string>
    <string name="alias_team_in_round">Команда в раунде</string>
    <string name="menu_label">ВЕЧЕРИНКА!</string>
    <string name="result_result_fragment">Результаты</string>
    <string name="play_again_result_fragment">Играть снова</string>
    <string name="exit_result_fragment">В меню</string>
    <string name="appbar_players_fragment">Игроки</string>
    <string name="add_players_fragment">+</string>
    <string name="start_players_fragment">Далее</string>
    <string name="exit_players_fragment">В меню</string>
    <string name="pause_game_fragment">II</string>
    <string name="continue_game_fragment">Продолжить</string>
    <string name="exit_game_fragment">Выход</string>
    <string name="wrong_game_fragment">Не угадал</string>
    <string name="right_game_fragment">Угадал</string>

    <!--  Who am i strings  -->

</resources>
