<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/new_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/new_purple"
        android:gravity="center_vertical"
        android:paddingStart="72dp"
        android:paddingEnd="0dp"
        android:text="@string/alias_settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/alias_todo"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <ImageButton
        android:id="@+id/ibtn_left"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/new_purple"
        android:contentDescription="@null"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_settings"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toTopOf="@id/tv_settings" />

    <TextView
        android:id="@+id/tv_time_round"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="48sp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:text="@string/alias_time_rounds"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_count_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="22sp"
        android:layout_marginEnd="32dp"
        android:textSize="28sp"
        android:text="@string/alias_default_time_value"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_time_round"
        app:layout_constraintEnd_toEndOf="@id/tv_time_round"
        app:layout_constraintTop_toTopOf="@id/tv_time_round" />

    <SeekBar
        android:id="@+id/seek_bar_time"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:max="300"
        android:min="10"
        android:progress="155"
        android:theme="@style/SeekBarColor"
        android:thumbTint="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time_round" />

    <SeekBar
        android:id="@+id/seek_bar_word"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:max="150"
        android:min="10"
        android:progress="80"
        android:theme="@style/SeekBarColor"
        android:thumbTint="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_count_words" />

    <TextView
        android:id="@+id/tv_count_words"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="48sp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:text="@string/alias_count_words"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time_round" />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:text="@string/alias_default_counter_value"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_count_words"
        app:layout_constraintEnd_toEndOf="@id/tv_count_words"
        app:layout_constraintTop_toTopOf="@id/tv_count_words" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/new_purple"
        android:text="@string/alias_further"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
