<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_alias"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title_player_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tod_player_name"
        android:background="@color/tod_blue"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/days_one"
        app:layout_constraintBottom_toTopOf="@+id/gl_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_go_to_menu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:padding="5dp"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toTopOf="@+id/gl_upper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_players"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add_players_vect"
        app:layout_constraintBottom_toTopOf="@+id/gl_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.07"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="32dp"
        android:background="@drawable/rounded_frame_for_task"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_player_name"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:background="@drawable/semirounded_frame_for_title_task"
            android:text="@string/tod_truth_or_dare"
            android:fontFamily="@font/days_one"
            android:textSize="25sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_task_or_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/tod_task"
            android:fontFamily="@font/days_one"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_bottom">

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/tod_blue"
            android:fontFamily="@font/days_one"
            android:text="@string/tod_refresh" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/tod_blue"
            android:fontFamily="@font/days_one"
            android:text="@string/tod_continue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>