<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_alias">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/purple_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alias_winner"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/new_white"
        android:shadowColor="@color/gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        app:layout_constraintBottom_toTopOf="@+id/tv_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alias_team"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/btn_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_winner"
        android:textColor="@color/new_white"
        android:shadowColor="@color/gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/alias_win_menu"
        android:textSize="20sp"
        android:textColor="@color/new_white"
        android:shadowColor="@color/gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:background="@drawable/alias_button"/>



</androidx.constraintlayout.widget.ConstraintLayout>