<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_alias">

    <TextView
        android:id="@+id/tv_appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/whoami_orange"
        android:gravity="center_vertical"
        android:paddingStart="62dp"
        android:text="@string/appbar_players_fragment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/days_one"
        android:shadowColor="@color/gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ibtn_sweet_home"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/whoami_orange"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_player_whoami"
        app:layout_constraintBottom_toBottomOf="@id/tv_appbar"
        app:layout_constraintStart_toStartOf="@id/tv_appbar"
        app:layout_constraintTop_toTopOf="@id/tv_appbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_player"
        android:layout_width="327dp"
        android:layout_height="378dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/frame_scrollview"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appbar"
        app:layout_constraintVertical_bias="0.003"
        tools:itemCount="6"
        tools:listitem="@layout/item_player" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="@color/whoami_orange"
        android:text="@string/add_players_fragment"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_player"
        app:layout_constraintVertical_bias="1.0"
        android:fontFamily="@font/days_one"/>

    <Button
        android:id="@+id/btn_player_start"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/whoami_orange"
        android:text="@string/start_players_fragment"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_exit"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus"
        android:fontFamily="@font/days_one"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/whoami_orange"
        android:text="@string/exit_players_fragment"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_player_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus"
        android:fontFamily="@font/days_one"/>

</androidx.constraintlayout.widget.ConstraintLayout>